Update sbt项目构建.md