@@ -14,7 +14,14 @@ sbt是一个代码编译工具，是scala界的mvn，可以编译scala,java等�
 ```C++
  1 ： tar zxvf sbt-0.13.9.tgz
 ```
-
+```C++
+ 2 ：在./sbt目录下面新建文件名为sbt的文本文件 
+ $ cd ./sbt
+ $ vim sbt
+ # 在sbt文本文件中添加如下信息：
+   BT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+   java $SBT_OPTS -jar /search/odin/ONLINE/Spark/sbt/bin/sbt-launch.jar "$@" 
+```
 
 # sbt项目环境构建：
  
